# ChangeLog for mail-client/roundcube
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.62 2011/12/08 21:09:38 maekke Exp $

  08 Dec 2011; Markus Meier <maekke@gentoo.org> roundcube-0.6.ebuild:
  add ~arm, bug #385255

  25 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> roundcube-0.6.ebuild:
  ppc/ppc64 stable wrt #389807

  05 Nov 2011; Andreas Schuerch <nativemad@gentoo.org> roundcube-0.6.ebuild:
  x86 stable, see bug 388613

  03 Nov 2011; Tony Vroon <chainsaw@gentoo.org> roundcube-0.6.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in security bug #388613.

*roundcube-0.6 (01 Oct 2011)

  01 Oct 2011; Peter Volkov <pva@gentoo.org> +roundcube-0.6.ebuild,
  +files/postinstall-en-0.6.txt, +files/postupgrade-en-0.6.txt:
  Version bump.

  25 Aug 2011; Tim Harder <radhermit@gentoo.org> -roundcube-0.5.1.ebuild,
  -roundcube-0.5.3.ebuild:
  Remove old.

  24 Aug 2011; Markus Meier <maekke@gentoo.org> roundcube-0.5.4.ebuild:
  arm stable, bug #379563

  20 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> roundcube-0.5.4.ebuild:
  x86 stable wrt security bug #379563

  18 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> roundcube-0.5.4.ebuild:
  ppc/ppc64 stable wrt #379563

  17 Aug 2011; Markos Chandras <hwoarang@gentoo.org> roundcube-0.5.4.ebuild:
  Stable on amd64 wrt bug #379563

*roundcube-0.5.4 (17 Aug 2011)

  17 Aug 2011; Peter Volkov <pva@gentoo.org> +roundcube-0.5.4.ebuild:
  Version bump, fixes security bug 379563

*roundcube-0.5.3 (03 Jun 2011)

  03 Jun 2011; Tim Harder <radhermit@gentoo.org> -roundcube-0.5.2-r1.ebuild,
  -files/roundcube-0.5.2-fix-imap-disconnect.patch, +roundcube-0.5.3.ebuild:
  Version bump and remove old.

*roundcube-0.5.2-r1 (18 May 2011)

  18 May 2011; Tim Harder <radhermit@gentoo.org> -roundcube-0.5.2.ebuild,