@@ -1,19 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX postinstall-en-0.6.txt 2218 RMD160 e0cf380d6cf04f92bd46cee5e9d02a954bc67f8d SHA1 724f5f01faf7b1970fb6c2e4cfe2badc66db9180 SHA256 f40b5134e13206e0abc325ec28bc0d42d8f233efc0a86304d985845e06377067
 AUX postinstall-en.txt 2513 RMD160 c2a04efcdd4007642221797a10877c2fc57ad874 SHA1 8bc888b2944694bbbadeddfe6f193c3a8a995a87 SHA256 5c1fa9d43f29158521188aae417654f968fb41662c46721b8183728df37eb4c4
 AUX postupgrade-en-0.6.txt 1271 RMD160 756dc86b991a31912c68d504378c009f728dab9d SHA1 83d6143cc81ebe9b277cf1ea7335ac11a6ef078d SHA256 110724101fb7f712fec3e44023d1562de235dee4578acd5be5846bdf2e510c18
 DIST roundcubemail-0.5.4.tar.gz 2291117 RMD160 a1d4ab3f2d8eaf08c6e17457a6430799ba53cde0 SHA1 d3f4155edf9ef276a948d7b004a7be8890524a54 SHA256 8562325c850edd9e83806b21c7bde1480c5d150cc5cb48beb014ef972a201ed5
 DIST roundcubemail-0.6.tar.gz 2681342 RMD160 b33eb13b909d57b89af6609a3cbac3151de236e1 SHA1 304a888554a54817ffcd13c20adc46368d18935a SHA256 18d255c5317b5cbe68fb48494c39b2b3403c0452890f6159d22f876be49051cc
+DIST roundcubemail-0.7.tar.gz 2707916 RMD160 fba15abdb1b060da7d2705a075069f2bb7aa2332 SHA1 89a8c08babb2b87e71ca0ca10c0635282870c9f0 SHA256 0a517c31e8796fab33fefb27bf84b7ce6aa74513996c8b7b1f40912a0f334556
 EBUILD roundcube-0.5.4.ebuild 1957 RMD160 f95f08ffc7e534a179a341cb9b55a5ca08574917 SHA1 d1374e11b6ccfad05e189058622f89b8a50715f1 SHA256 3ea922a6268d18ddf29d1580ad0f3bc13c0776d338e428a85dc2e39d4ff081d9
 EBUILD roundcube-0.6.ebuild 2364 RMD160 626d82a713964baf1da6430cea31ab7b57baad62 SHA1 8ae54a1374081cceb977aef2c671d3d1696de58e SHA256 368b710ac944addd52273347e53bb3f3d0aa09f791e83f99cca866b25371d90d
-MISC ChangeLog 9168 RMD160 ecb74c23c83d1100baf8d51805cf2d14ac56bab8 SHA1 313fa30a183afe5159fcea193c54cf6bf9139b0f SHA256 f943f17a802f818923fee4a96b57657fee9ab36728ab93808001a985d0a48974
+EBUILD roundcube-0.7.ebuild 2621 RMD160 3ff6359f7679935331c184fb2001be1450ade675 SHA1 afb0d7110c79fe336872225fc2a4995f9a4fcf18 SHA256 4e5c92354ba59ab5c13e7a25ab72015305cc0063223c475bacfef1a47e9b960e
+MISC ChangeLog 9375 RMD160 fc07b18ff246d023131ef84d7ecd8ddb7373e4db SHA1 1cc7467147ccc926197b1127e005be86da8a7244 SHA256 e7d46482a1d366741769ed60f19d6d433b7f2b5ac2d2eb2f90558e3eba3ec0e4
 MISC metadata.xml 161 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b SHA1 5b91a6d8d06d3dca2d774425befba30caca51507 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7hKCQACgkQkKaRLQcq0GJk3wCeKbbnx2xFy5MOyU+lAy2JaHdm
-tQYAoIeeKjx5PLVQcAuhxCOkKAUKZsOD
-=Rmxf
+iQEcBAEBCgAGBQJO6cnWAAoJEEqz6FtPBkyjcUMIAIQ2MPWP1c+2LehwJwbeaNxh
+1plokIz4L7e2x29g2y7UQWKqvHlxkprpJL5S/7OiA3Z77IV+xgt9BR8LS9oZZ+VR
+dgKsHks9wDltMugF5EoSpyoDSdkyOly5DGIN79dcnmbnf1/KBuolwOT6ldlzBEfx
+J8hw/1/Vh6KNjLp2diqJCHFYAhjSh+ld7eBbs93ILYR8wbRQSRv3TXNkM2E4ELq9
+9Gv3umSOHbN4i/Wbcor3UMYeezyKo9GzosNJ2zY1geV2W7smm5LAGecZr8/PaQLC
+FI6Pi/fShSUYTP2/0dW7wEz+121sarrgqwffuVuO2+sBK21ilKkBI/bjz7T656g=
+=q720
 -----END PGP SIGNATURE-----
